--- a/style.css
+++ b/style.css
@@ -793,5 +793,17 @@ footer span a:hover{
     margin-bottom: 0;
   }
   
+  @media only screen and (max-width: 768px) {
+    .projects .projects-content {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .projects .project-card {
+      width: 100%;
+    }
+  }
+  
+  
 
   
